Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Manualecidades by marcuslobo</title>
+    <title>Manual de instalação do e-cidade V1.0 by marcuslobo</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Manualecidades</h1>
+        <h1>Manual de instalação do e-cidade V1.0</h1>
         <p></p>
       </header>
 
@@ -195,7 +195,7 @@ Para conseguir baixar essa versão, edite o arquivo /etc/apt/sources.list:
 <p><code>sudo gedit /etc/postgresql/8.2/main/pg_hba.conf</code></p>
 
 <p>Altere as linhas no final do arquivo que estão sem o caractere '#', colocando “trust” no lugar da última coluna. Assim:
-<code>local all all                trust</code>
+<br><code>local all all                trust</code>
 <br><code>host all all 127.0.0.1/32    trust</code>
 <br><code>host all all ::1/128         trust</code></p>
 
