Edição do index.html para fazer o documento assemelhar-se mais com o ODT original

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
   <head>
@@ -96,8 +95,8 @@ JAVA TOMCAT
 <h2>
 <a name="31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o" class="anchor" href="#31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o"><span class="octicon octicon-link"></span></a>3.1 - Informações gerais para instalação</h2>
 
-<p>É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL. 
-Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.
+<p>  É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL. 
+	Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.
 Este manual pressupõe que o servidor de aplicação Web e o banco de dados estarão instalados no mesmo servidor. 
 Neste guia, sempre que necessário editar algum arquivo, será usado o editor de texto GEDIT. Mas cabe lembrar que é apenas uma opção, existem outros editores como o VIM.</p>
 
@@ -108,7 +107,7 @@ Neste guia, sempre que necessário editar algum arquivo, será usado o editor de
 <a name="41---instalando-e-configurando-o-servidor-web-apache2" class="anchor" href="#41---instalando-e-configurando-o-servidor-web-apache2"><span class="octicon octicon-link"></span></a>4.1 - Instalando e configurando o Servidor WEB Apache2</h2>
 
 <p>Para instalar o Apache2, execute o seguinte comando:
-<br><code>sudo apt-get install apache2</code></p>
+<br><pre>sudo apt-get install apache2</pre></br></p>
 
 <p>Agora é necessário alterar o arquivo /etc/apache2/apache2.conf. Usando o gedit, é possível editar as informações desse arquivo executando o comando:
 <br><code>sudo gedit /etc/apache2/apache2.conf</code></p>
