--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
 <b>Renúncia</b> — Qualquer das condições acima pode ser <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/br/deed.pt_BR#">renunciada</a> se você obtiver permissão do titular dos direitos autorais. 
 <b>Domínio Público</b> — Onde a obra ou qualquer de seus elementos estiver em <a href="http://wiki.creativecommons.org/Public_domain">domínio público</a> sob o direito aplicável, esta condição não é, de maneira alguma, afetada pela licença. 
 Outros Direitos — Os seguintes direitos não são, de maneira alguma, afetados pela licença: 
-Limitações e exceções aos direitos autorais ou quaisquer <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#Do_Creative_Commons_licenses_affect_fair_use.2C_fair_dealing_or_other_exceptions_to_copyright.3F">usos livres</a> aplicáveis; 
-Os <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#I_don.E2.80.99t_like_the_way_a_person_has_used_my_work_in_a_derivative_work_or_included_it_in_a_collective_work.3B_what_can_I_do.3F">direitos morais</a> do autor; 
-Direitos que outras pessoas podem ter sobre a obra ou sobre a utilização da obra, tais como <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#When_are_publicity_rights_relevant.3F">direitos de imagem</a> ou privacidade. 
+<br>Limitações e exceções aos direitos autorais ou quaisquer <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#Do_Creative_Commons_licenses_affect_fair_use.2C_fair_dealing_or_other_exceptions_to_copyright.3F">usos livres</a> aplicáveis; 
+Os <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#I_don.E2.80.99t_like_the_way_a_person_has_used_my_work_in_a_derivative_work_or_included_it_in_a_collective_work.3B_what_can_I_do.3F">direitos morais</a> do autor; <br>
+Direitos que outras pessoas podem ter sobre a obra ou sobre a utilização da obra, tais como <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#When_are_publicity_rights_relevant.3F">direitos de imagem</a> ou privacidade. <br>
 <b>Aviso</b> — Para qualquer reutilização ou distribuição, você deve deixar claro a terceiros os termos da licença a que se encontra submetida esta obra. A melhor maneira de fazer isso é com um link para esta página. </p>
 
 <h1>
 <a name="2---introdu%C3%A7%C3%A3o-ao-sistema-e-cidade" class="anchor" href="#2---introdu%C3%A7%C3%A3o-ao-sistema-e-cidade"><span class="octicon octicon-link"></span></a>2 - Introdução ao Sistema e-cidade</h1>
 
 <p>O <b>e-cidade</b> destina-se a informatizar a gestão dos Municípios Brasileiros de forma integrada. Essa informatização contempla a integração entre os entes municipais: Prefeitura Municipal, Câmara Municipal, Autarquias, Fundações e outros.
-A economia de recursos é somente uma das vantagens na adoção do <b>e-cidade</b>. Há liberdade de escolha dos fornecedores e garantia de continuidade do sistema, uma vez que é apoiado pelo Ministério do Planejamento. </p>
+<br>A economia de recursos é somente uma das vantagens na adoção do <b>e-cidade</b>. Há liberdade de escolha dos fornecedores e garantia de continuidade do sistema, uma vez que é apoiado pelo Ministério do Planejamento. </p>
 
 <h2>
 <a name="21---caracter%C3%ADsticas" class="anchor" href="#21---caracter%C3%ADsticas"><span class="octicon octicon-link"></span></a>2.1 - Características</h2>
 
-<p>O código fonte está disponível para ser baixado livremente no Portal do Software Público Brasileiro: <a href="http://www.softwarepublico.gov.br">www.softwarepublico.gov.br</a>. 
+<p>O código fonte está disponível para ser baixado livremente no Portal do Software Público Brasileiro: <a href="http://www.softwarepublico.gov.br">www.softwarepublico.gov.br</a>.<br> 
 O sistema possui a seguinte <b>plataforma tecnológica</b>:</p>
 
 <p>LINUX
@@ -95,9 +95,9 @@ JAVA TOMCAT
 <h2>
 <a name="31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o" class="anchor" href="#31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o"><span class="octicon octicon-link"></span></a>3.1 - Informações gerais para instalação</h2>
 
-<p>	É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL. 
-	Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.
-Este manual pressupõe que o servidor de aplicação Web e o banco de dados estarão instalados no mesmo servidor. 
+<p>É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL.<br>
+Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.<br>
+Este manual pressupõe que o servidor de aplicação Web e o banco de dados estarão instalados no mesmo servidor.<br>
 Neste guia, sempre que necessário editar algum arquivo, será usado o editor de texto GEDIT. Mas cabe lembrar que é apenas uma opção, existem outros editores como o VIM.</p>
 
 <h1>
