Finalização do código html

--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@ Feito isso, acesse a pasta /tmp:</p>
 
 <p>As variáveis devem estar da seguinte maneira:</p>
 
-<p><pre>$DB_USUARIO = “dbportal”;</pre></p>
+<p><pre>$DB_USUARIO = “dbportal”;</p>
 
-<p><pre>$DB_SENHA = “”; // Ou alguma senha, se foi definida para o usuário dbportal no postgresql</pre> </p>
+<p>$DB_SENHA = “”; // Ou alguma senha, se foi definida para o usuário dbportal no postgresql</p>
 
-<pre>$DB_SERVIDOR = “localhost”;<br>
+$DB_SERVIDOR = “localhost”;<br>
 
 $DB_PORTA = “5432”;<br>
 
@@ -422,13 +422,13 @@ $DB_BASE = “e-cidade”;</pre><br>
 
 <p>Caso você tenha instalado o servidor sem ambiente gráfico, então apartir de um computador desktop abra o navegador Firefox e acesse o seguinte endereço:</p>
 
-<p><pre>http://&lt;ip_do_servidor&gt;/e-cidade</pre></p>
+<p><pre>http://&lt;ip_do_servidor&gt;/e-cidade</p>
 
-<p><pre>Onde “ip_do_servidor” indica o entereço IP atribuído na instalação do servidor Ubuntu.</pre></p>
+<p>Onde “ip_do_servidor” indica o entereço IP atribuído na instalação do servidor Ubuntu.</pre></p>
 
 <p>Na tela de login do e-cidade informar o usuário “dbseller” e deixar a senha em branco.</p>
 
-<p><pre>**ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.**</pre></p>
+<b>**ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.**</b>
 
 <p><b>Compatibilidade das versões do Firefox</b>:</p>
 
@@ -493,19 +493,19 @@ sudo gedit  /var/www/e-cidade/config/require_extensions.xml</p>
 
 <p>As variáveis devem estar da seguinte maneira:</p>
 
-<p><pre>$DB_INSTITUICAO = 1;</pre></p>
+<p><pre>$DB_INSTITUICAO = 1;</p>
 
-<p><pre>$DB_SENHA='; // Ou se for definida alguma senha para o usuario dbportal no postgresql</pre></p>
+<p><pre>$DB_SENHA='; // Ou se for definida alguma senha para o usuario dbportal no postgresql</p>
 
-<p><pre>$DB_SERVIDOR = 'localhost';</pre></p>
+<p><pre>$DB_SERVIDOR = 'localhost';</p>
 
-<p><pre>$DB_PORTA= '5432';</pre></p>
+<p>$DB_PORTA= '5432';</p>
 
-<p>$DB_BASEDADOS = 'e-cidade';</p>
+<p>$DB_BASEDADOS = 'e-cidade';</pre></p>
 
 <p>Para acessar o e-cidade online, entre no seguinte endereço :</p>
 
-<p>http://&lt;ip_do_servidor&gt;/e-cidadeonline</pre></p>
+<p><pre>http://&lt;ip_do_servidor&gt;/e-cidadeonline</pre></p>
 
 <h1>
 <a name="5---link-da-licen%C3%A7a-j%C3%BAridica-creative-commons" class="anchor" href="#5---link-da-licen%C3%A7a-j%C3%BAridica-creative-commons"><span class="octicon octicon-link"></span></a>5 - Link da Licença Júridica Creative Commons</h1>
